// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphQL operation coverage > separates declared mutation gaps from unregistered introspected mutation roots 1`] = `
{
  "declaredGaps": [
    "appPurchaseOneTimeCreate",
    "appRevokeAccessScopes",
    "appSubscriptionCancel",
    "appSubscriptionCreate",
    "appSubscriptionLineItemUpdate",
    "appSubscriptionTrialExtend",
    "appUninstall",
    "appUsageRecordCreate",
    "bulkProductResourceFeedbackCreate",
    "combinedListingUpdate",
    "companyContactSendWelcomeEmail",
    "consentPolicyUpdate",
    "delegateAccessTokenCreate",
    "delegateAccessTokenDestroy",
    "deliveryCustomizationActivation",
    "deliveryCustomizationCreate",
    "deliveryCustomizationDelete",
    "deliveryCustomizationUpdate",
    "deliveryPromiseParticipantsUpdate",
    "deliveryPromiseProviderUpsert",
    "deliverySettingUpdate",
    "disputeEvidenceUpdate",
    "eventBridgeServerPixelUpdate",
    "fulfillmentConstraintRuleCreate",
    "fulfillmentConstraintRuleDelete",
    "fulfillmentConstraintRuleUpdate",
    "fulfillmentOrderClose",
    "fulfillmentOrderLineItemsPreparedForPickup",
    "fulfillmentOrderReschedule",
    "menuCreate",
    "menuDelete",
    "menuUpdate",
    "mobilePlatformApplicationCreate",
    "mobilePlatformApplicationDelete",
    "mobilePlatformApplicationUpdate",
    "orderEditAddShippingLine",
    "orderEditRemoveShippingLine",
    "orderEditUpdateShippingLine",
    "orderRiskAssessmentCreate",
    "privacyFeaturesDisable",
    "productBundleCreate",
    "productBundleUpdate",
    "productFeedCreate",
    "productFeedDelete",
    "productFullSync",
    "productVariantRelationshipBulkUpdate",
    "pubSubServerPixelUpdate",
    "removeFromReturn",
    "returnProcess",
    "reverseDeliveryCreateWithShipping",
    "reverseDeliveryShippingUpdate",
    "reverseFulfillmentOrderDispose",
    "scriptTagCreate",
    "scriptTagDelete",
    "scriptTagUpdate",
    "serverPixelCreate",
    "serverPixelDelete",
    "shopifyPaymentsPayoutAlternateCurrencyCreate",
    "shopResourceFeedbackCreate",
    "storefrontAccessTokenCreate",
    "storefrontAccessTokenDelete",
    "themeCreate",
    "themeDelete",
    "themeFilesCopy",
    "themeFilesDelete",
    "themeFilesUpsert",
    "themePublish",
    "themeUpdate",
    "urlRedirectBulkDeleteAll",
    "urlRedirectBulkDeleteByIds",
    "urlRedirectBulkDeleteBySavedSearch",
    "urlRedirectBulkDeleteBySearch",
    "urlRedirectCreate",
    "urlRedirectDelete",
    "urlRedirectImportCreate",
    "urlRedirectImportSubmit",
    "urlRedirectUpdate",
    "webPixelCreate",
    "webPixelDelete",
    "webPixelUpdate",
  ],
  "unregistered": [
    "orderDelete",
    "orderEditAddCustomItem",
    "orderEditAddLineItemDiscount",
    "orderEditRemoveDiscount",
    "orderEditUpdateDiscount",
    "returnApproveRequest",
    "returnDeclineRequest",
    "subscriptionBillingAttemptCreate",
    "subscriptionBillingCycleBulkCharge",
    "subscriptionBillingCycleBulkSearch",
    "subscriptionBillingCycleCharge",
    "subscriptionBillingCycleContractDraftCommit",
    "subscriptionBillingCycleContractDraftConcatenate",
    "subscriptionBillingCycleContractEdit",
    "subscriptionBillingCycleEditDelete",
    "subscriptionBillingCycleEditsDelete",
    "subscriptionBillingCycleScheduleEdit",
    "subscriptionBillingCycleSkip",
    "subscriptionBillingCycleUnskip",
    "subscriptionContractActivate",
    "subscriptionContractAtomicCreate",
    "subscriptionContractCancel",
    "subscriptionContractCreate",
    "subscriptionContractExpire",
    "subscriptionContractFail",
    "subscriptionContractPause",
    "subscriptionContractProductChange",
    "subscriptionContractSetNextBillingDate",
    "subscriptionContractUpdate",
    "subscriptionDraftCommit",
    "subscriptionDraftDiscountAdd",
    "subscriptionDraftDiscountCodeApply",
    "subscriptionDraftDiscountRemove",
    "subscriptionDraftDiscountUpdate",
    "subscriptionDraftFreeShippingDiscountAdd",
    "subscriptionDraftFreeShippingDiscountUpdate",
    "subscriptionDraftLineAdd",
    "subscriptionDraftLineRemove",
    "subscriptionDraftLineUpdate",
    "subscriptionDraftUpdate",
  ],
}
`;

exports[`GraphQL operation coverage > snapshots introspected Admin GraphQL mutations that are not formally supported yet 1`] = `
[
  "appPurchaseOneTimeCreate",
  "appRevokeAccessScopes",
  "appSubscriptionCancel",
  "appSubscriptionCreate",
  "appSubscriptionLineItemUpdate",
  "appSubscriptionTrialExtend",
  "appUninstall",
  "appUsageRecordCreate",
  "bulkProductResourceFeedbackCreate",
  "combinedListingUpdate",
  "companyContactSendWelcomeEmail",
  "consentPolicyUpdate",
  "delegateAccessTokenCreate",
  "delegateAccessTokenDestroy",
  "deliveryCustomizationActivation",
  "deliveryCustomizationCreate",
  "deliveryCustomizationDelete",
  "deliveryCustomizationUpdate",
  "deliveryPromiseParticipantsUpdate",
  "deliveryPromiseProviderUpsert",
  "deliverySettingUpdate",
  "disputeEvidenceUpdate",
  "eventBridgeServerPixelUpdate",
  "fulfillmentConstraintRuleCreate",
  "fulfillmentConstraintRuleDelete",
  "fulfillmentConstraintRuleUpdate",
  "fulfillmentOrderClose",
  "fulfillmentOrderLineItemsPreparedForPickup",
  "fulfillmentOrderReschedule",
  "menuCreate",
  "menuDelete",
  "menuUpdate",
  "mobilePlatformApplicationCreate",
  "mobilePlatformApplicationDelete",
  "mobilePlatformApplicationUpdate",
  "orderDelete",
  "orderEditAddCustomItem",
  "orderEditAddLineItemDiscount",
  "orderEditAddShippingLine",
  "orderEditRemoveDiscount",
  "orderEditRemoveShippingLine",
  "orderEditUpdateDiscount",
  "orderEditUpdateShippingLine",
  "orderRiskAssessmentCreate",
  "privacyFeaturesDisable",
  "productBundleCreate",
  "productBundleUpdate",
  "productFeedCreate",
  "productFeedDelete",
  "productFullSync",
  "productVariantRelationshipBulkUpdate",
  "pubSubServerPixelUpdate",
  "removeFromReturn",
  "returnApproveRequest",
  "returnDeclineRequest",
  "returnProcess",
  "reverseDeliveryCreateWithShipping",
  "reverseDeliveryShippingUpdate",
  "reverseFulfillmentOrderDispose",
  "scriptTagCreate",
  "scriptTagDelete",
  "scriptTagUpdate",
  "serverPixelCreate",
  "serverPixelDelete",
  "shopifyPaymentsPayoutAlternateCurrencyCreate",
  "shopResourceFeedbackCreate",
  "storefrontAccessTokenCreate",
  "storefrontAccessTokenDelete",
  "subscriptionBillingAttemptCreate",
  "subscriptionBillingCycleBulkCharge",
  "subscriptionBillingCycleBulkSearch",
  "subscriptionBillingCycleCharge",
  "subscriptionBillingCycleContractDraftCommit",
  "subscriptionBillingCycleContractDraftConcatenate",
  "subscriptionBillingCycleContractEdit",
  "subscriptionBillingCycleEditDelete",
  "subscriptionBillingCycleEditsDelete",
  "subscriptionBillingCycleScheduleEdit",
  "subscriptionBillingCycleSkip",
  "subscriptionBillingCycleUnskip",
  "subscriptionContractActivate",
  "subscriptionContractAtomicCreate",
  "subscriptionContractCancel",
  "subscriptionContractCreate",
  "subscriptionContractExpire",
  "subscriptionContractFail",
  "subscriptionContractPause",
  "subscriptionContractProductChange",
  "subscriptionContractSetNextBillingDate",
  "subscriptionContractUpdate",
  "subscriptionDraftCommit",
  "subscriptionDraftDiscountAdd",
  "subscriptionDraftDiscountCodeApply",
  "subscriptionDraftDiscountRemove",
  "subscriptionDraftDiscountUpdate",
  "subscriptionDraftFreeShippingDiscountAdd",
  "subscriptionDraftFreeShippingDiscountUpdate",
  "subscriptionDraftLineAdd",
  "subscriptionDraftLineRemove",
  "subscriptionDraftLineUpdate",
  "subscriptionDraftUpdate",
  "themeCreate",
  "themeDelete",
  "themeFilesCopy",
  "themeFilesDelete",
  "themeFilesUpsert",
  "themePublish",
  "themeUpdate",
  "urlRedirectBulkDeleteAll",
  "urlRedirectBulkDeleteByIds",
  "urlRedirectBulkDeleteBySavedSearch",
  "urlRedirectBulkDeleteBySearch",
  "urlRedirectCreate",
  "urlRedirectDelete",
  "urlRedirectImportCreate",
  "urlRedirectImportSubmit",
  "urlRedirectUpdate",
  "webPixelCreate",
  "webPixelDelete",
  "webPixelUpdate",
]
`;
